--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<h1>Eric的网站</h1>
 	<h1>Welcome come Eric's web</h1>
 	<a href="https://github.com/exyq/"><h3>Eric's Github</h3></a>
-	<a href="https://exyq.github.io/note.md"><h3>Eric's note</h3></a>
+	<a href="../note.md"><h3>Eric's note</h3></a>
 </body>
 </html>
